# goas

./: CMakeLists.txt  Makefile  README  README.md  compileBenchmarks_exampleND.py  test_linux.py
goas/: README
goas/oas/: Makefile  README.md  debug.sh  goas  goas.sh  oas_parser.y  test.py  valgrind.sh
goas/oas_mmap/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gmon.out  install_manifest.txt  oas_parser.c  oas_parser.h  oas_scanner.c  temp.c  tempD
goas/oas_mmap/include/: record.h
goas/oas_mmap/src/: .#record.h2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  oas_parser.y  oas_scanner.l  record.c  select.c
goas/oas_mmap/src/lib/oas.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  depend.internal  depend.make  flags.make  link.txt
goas/oas_mmap/tst/: test_gres.py
goas/oas_mmap/tst/oas_queries/all/: 1000k_scan_select_project_sort6  1000k_scan_select_project_sort9  100k_scan_select_project_sort1  100k_scan_select_project_sort6  100k_scan_select_project_sort9  1_scan_select_project_sort9  600k_scan_select_project_sort12  800k_scan_select_project_sort3
goas/oas_mmap/tst/oas_queries/project/: 100k_scan_project3  1_scan_project1  200k_scan_project3  200k_scan_project9  300k_scan_project1  300k_scan_project9  600k_scan_project1  800k_scan_project9
goas/oas_mmap/tst/oas_queries/scan/: 1000k_scan  600k_scan  800k_scan
goas/oas_mmap/tst/oas_queries/select/: 1000k_scan_select3  100k_scan_select2  100k_scan_select3  200k_scan_select5  500k_scan_select1  600k_scan_select4  800k_scan_select4
goas/oas_mmap/tst/oas_queries/sort/: 1000k_scan_sort3  1_scan_sort1  200k_scan_sort12  300k_scan_sort9  400k_scan_sort1  400k_scan_sort6  600k_scan_sort3  800k_scan_sort12  800k_scan_sort6
goas/oas_mmap/tst/oas_results/: r_times_ompO2.txt
goas/oas_mmap/tst/pgres_queries/all/: t100k_scan_select_project_sort12  t400k_scan_select_project_sort6  t500k_scan_select_project_sort9  t600k_scan_select_project_sort3  t700k_scan_select_project_sort1  t700k_scan_select_project_sort3  t700k_scan_select_project_sort6
goas/oas_mmap/tst/pgres_queries/project/: t1000k_scan_project12  t200k_scan_project6  t300k_scan_project9  t400k_scan_project1  t500k_scan_project3  t600k_scan_project12  t600k_scan_project3  t900k_scan_project12
goas/oas_mmap/tst/pgres_queries/scan/: 400k_scan  t200k_scan  t800k_scan
goas/oas_mmap/tst/pgres_queries/select/: t1000k_scan_select3  t1000k_scan_select5  t100k_scan_select3  t100k_scan_select4  t100k_scan_select5  t200k_scan_select2  t300k_scan_select3  t400k_scan_select2  t400k_scan_select4  t400k_scan_select5  t500k_scan_select1  t500k_scan_select4  t700k_scan_select2  t800k_scan_select5  t900k_scan_select1
goas/oas_mmap/tst/pgres_queries/sort/: t1000k_scan_sort3  t200k_scan_sort12  t300k_scan_sort9  t500k_scan_sort6  t600k_scan_sort1  t900k_scan_sort1  t900k_scan_sort12
goas/oas_mmap/tst/pgres_results/: times.txt
goas/oas_mp/: Makefile  README.md  debug.sh  goas  goas.sh
goas/oas_omp/: debug.sh  valgrind.sh
goas/oas_p/: Makefile
goas/oas_pt/: goas.sh  valgrind.sh
goas/testing/: OASGen.java  diff_checks.py  test_oas.py  test_omp.py
goas/trunk/: README
include/: Constants.hpp  Field.hpp  IntegerField.hpp  MMapLinux.hpp  Meta.hpp  Project.hpp  RawStringField.hpp  Record.hpp  Record1.hpp  Relation.hpp  Scan.hpp  Select.hpp  Sort.hpp  StringUtilities.hpp  project.h  select.h
shells/: debug  profile.sh  valgrind.sh
src/: CMakeLists.txt  Field.cpp  IntegerField.cpp  MMap.java  MMapLinux.cpp  Meta.cpp  Meta.java  Operator.java  RawStringField.cpp  Record.cpp  Record.java  Record1.cpp  Relation.cpp  Relation.java  Scan.java  StringUtilities.cpp  Temp.java  oas_parser.y  oas_scanner.l  project.c  project.cpp  record.c  record.cpp  relation.cpp  scan.cpp  select.cpp  sort.c  sort.cpp
tst/: OASGen.cpp  test_gres.py  test_oas.py
tst/oas_queries/: genQueries.py
tst/pgres_inserts/: t1  t100  t10k  t1k
tst/results/: C_stats_r.txt  c_times.txt  cpp_goas_scan_c.txt  cpp_goas_scan_r.txt  cpp_scan_report.txt  cpp_stats_r.txt  goas_all_c.txt  goas_all_r.txt  goas_project_c.txt  goas_project_r.txt  goas_scan_c.txt  goas_scan_r.txt  (+20 more)
utst/: CMakeLists.txt  IntegerFieldTests.cpp  MetaBasicPopulator.cpp  MetaBasicPopulator.hpp  MetaTests.cpp  RawStringFieldTests.cpp  RecordTests.cpp  tests.cpp
(+1266 files in other folders)
